--- a/03-tp/src/index.css
+++ b/03-tp/src/index.css
@@ -6,3 +6,44 @@
 body {
   font-family: 'Inter', sans-serif;
 }
+
+.container {
+  max-width: 1000px;
+  margin: auto;
+}
+
+.section {
+  margin: 20px 0;
+}
+
+.title {
+  text-align: center;
+}
+
+.greengrocer .bg {
+  background-color: #253340;
+  margin-top: 20px;
+  padding: 5px 20px;
+}
+
+.greengrocer .fruit {
+  color: #fff;
+  margin: 15px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.greengrocer .badge {
+  padding: 5px 10px;
+  border-radius: 20px;
+  display: inline-block;
+}
+
+.greengrocer .in-stock {
+  background-color: #22a89c;
+}
+
+.greengrocer .not-in-stock {
+  background-color: #c7306a;
+}
