--- a/03-tp/src/index.css
+++ b/03-tp/src/index.css
@@ -25,7 +25,7 @@ body {
   margin-top: 20px;
 }
 
-.greengrocer .bg {
+.greengrocer {
   background-color: #253340;
   margin-top: 20px;
   padding: 5px 20px;
