--- a/03-tp/src/index.css
+++ b/03-tp/src/index.css
@@ -67,3 +67,61 @@ body {
   width: 50px;
   display: inline-block;
 }
+
+.streamers {
+  background-color: #1b2656;
+  padding: 15px;
+  gap: 15px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.streamer {
+  background-color: #293866;
+  width: 20%;
+  padding: 10px;
+  color: #fff;
+}
+
+.streamer > .flex {
+  align-items: center;
+  gap: 10px;
+}
+
+.streamer .avatar {
+  position: relative;
+}
+
+.streamer .avatar .premium {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.streamer .avatar img {
+  border-radius: 50%;
+  width: 70px;
+}
+
+.streamer .age {
+  font-size: 12px;
+}
+
+.streamer .social-title {
+  font-size: 12px;
+  margin-top: 10px;
+}
+
+.streamer .social-list {
+  list-style-type: none;
+  margin-top: 10px;
+}
+
+.streamer .social-list li {
+  margin-bottom: 5px;
+}
+
+.streamer .social-list a {
+  color: #bfb383;
+  margin-left: 5px;
+}
